project/stage/semantic_tests/reject/index_int_assign.ul
void main() {
    int  notarr;
    notarr[foo()] = 1;
}
int foo(){
    return 0;
}
